<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_alert"></Button>

    <Button
        android:id="@+id/btn_alert_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_alert_list"></Button>

    <Button
        android:id="@+id/btn_alert_multiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_alert_multiple"></Button>

    <Button
        android:id="@+id/btn_alert_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_alert_custom"></Button>

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_toast"></Button>

    <Button
        android:id="@+id/btn_toast_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/str_toast_long"></Button>

</LinearLayout>